--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,50 @@
+html, body{
+    height: 100%;
+    width: 100%;
+    margin: 0;
+}
+
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 #product-list{
-    width: 80%;
+    width: 100% !important;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
     margin: 0 auto;
+}
+
+.category-title{
+    font-size: 40px;
+}
+
+.category {
+    padding: 10px 15px;
+    margin: 5px;
+    border-radius: 8px;
+    background-color: #f1f1f1;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.category:hover {
+    background-color: #e0e0e0;
+}
+
+.category.seted {
+    background-color: #007bff;
+    color: white;
+    font-weight: bold;
+    box-shadow: 0 0 10px rgba(0, 123, 255, 0.4);
+}
+
+.card-body{
+    height: 220px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
